@@ -4,6 +4,10 @@
    - QueryMode documentation in configuration file didn't match implementation
      or man page description
  - New
+   - Add 95th percentile output as --95%, also available via --alert, --json
+     and --xml, requires 5MinuteHours configuration to be set to at least 744
+     (work in progress)
+   - Database queries resulting in error exit with status 1
    - Show spinning animation at the beginning of -l / --live output line,
      visibility configurable using LiveSpinner configuration option
    - Add --invert-colors option to image output for facilitating for example
